containers/tigera-operator/sample-project/basic-setup/basic-network-policy.yaml
# Basic Network Policy Example
# This demonstrates basic Calico network policies

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: default
spec:
  # Allow DNS traffic
  ingress:
  - action: Allow
    protocol: UDP
    source:
      namespaceSelector: has(projectcalico.org/name)
    destination:
      ports:
      - 53
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: has(projectcalico.org/name)
    destination:
      ports:
      - 53
  egress:
  - action: Allow
    protocol: UDP
    destination:
      ports:
      - 53
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 53
---
# Deny all other traffic by default
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  # Deny all ingress and egress by default
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
  egress:
  - action: Deny
---
# Allow traffic within namespace
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-namespace-traffic
  namespace: default
spec:
  ingress:
  - action: Allow
    source:
      namespaceSelector: has(projectcalico.org/name)
  egress:
  - action: Allow
    destination:
      namespaceSelector: has(projectcalico.org/name)
